--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "file-loader": "^0.11.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
